# clipsync-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  style.css  tsconfig.json
docs/: acceptance-vs-clipy.md
docs/ci-template/: README.md  ci.yml.template
docs/pages/: index.html  install.sh
openspec/specs/autostart/: spec.md
openspec/specs/clipboard-history/: spec.md
openspec/specs/github-sync/: spec.md
openspec/specs/global-hotkey/: spec.md
openspec/specs/paste-on-pick/: spec.md
openspec/specs/presentation-mode/: spec.md
openspec/specs/snippets/: spec.md
scripts/: deploy-pages.sh  install-hooks.sh
scripts/hooks/: pre-push
src/: App.tsx  SnippetsApp.tsx  bridge.ts  main.tsx  store.ts  styles.css  sync.test.ts  sync.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  hash.rs  hotkey.rs  lib.rs  main.rs  secrets.rs  snippets.rs  state.rs  storage.rs  sync.rs  tray.rs
src-tauri/src/sync_backends/: repo.rs
